Add project map and memory documentation